# durhack-FoofyTheFurby

./: .gitignore  README.md  code.txt  foofy.ino  furby2.py  furbymock.py  main.py  pyproject.toml  system-prompt.txt
examples/: 1.py  bad-comments.py  error-full.py  external-1.c  external-2.js  good-simple.py  mentions-furby.py  very-little-comments.py
extra material/: furbyAngy.txt
