[tool.poetry]
name = "screaming"
version = "0.1.0"
description = ""
authors = ["The456gamer <the456gamer@the456gamer.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^3.0.0"
openai = "^0.28.1"
simpleaudio = "^1.0.4"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
