[tool.poetry]
name = "screaming"
version = "0.1.0"
description = ""
authors = ["The456gamer <the456gamer@the456gamer.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^3.0.0"
openai = "^0.28.1"
pydub = "^0.25.1"
pyfirmata = "^1.1.0"
pymata-express = "^1.21"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"
wheel = "^0.41.3"
setuptools = "^68.2.2"
google-cloud-texttospeech = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
